# apps/api/openapi.json
@@ -4159,6 +4159,20 @@
                             "minimum": 0,
                             "maximum": 100,
                             "nullable": true
+                          },
+                          "continentsExplored": {
+                            "type": "integer",
+                            "minimum": 0
+                          },
+                          "continentsTotal": {
+                            "type": "integer",
+                            "minimum": 0
+                          },
+                          "exploredContinents": {
+                            "type": "array",
+                            "items": {
+                              "type": "string"
+                            }
                           }
                         },
                         "required": [
@@ -4168,7 +4182,10 @@
                           "certificatesTotal",
                           "lastActive",
                           "needsHelp",
-                          "accuracyPct"
+                          "accuracyPct",
+                          "continentsExplored",
+                          "continentsTotal",
+                          "exploredContinents"
                         ],
                         "additionalProperties": false
                       }
